Version 0.5.2
    * [Add] Widget : when clicking on the status icon, a popup is displayed with builds status summary info
    * [Add] The plugin starts up with the last selected view
    * [Upd] Improvement in handling Exception
    * [Upd] Job are loaded in background (with a waiting UI decorator)
    * [Fix] The Widget should not be duplicated when opening new Project Window

Version 0.5.1
    * [Fix] Regression : When the server url is not set (or set to a dummy url), the plugin should not try to connect
    * [Fix] Browser Panel : OneTouch Expandable should be accessible

Version 0.5.0
    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward, the search feature is cyclic)
    * [Add] Jenkins Widget that displays either a red icon when the number of the broken builds > 0 or else a blue icon.
    * [Upd] Increase loading performance
    * [Fix] Connection issue when Job and Rss autorefresh are both enabled
    * [Fix] Configuration Panel: File input fields should have a validator
    * [Fix] Configuration Panel: Rename 'Password' to 'Password file'

Version 0.4.4:
    * [Add] Nested View support (1 level only)
    * [Add] Job Tree : Build Description is displayed as tooltip
    * [Upd] Plugin SDK Migration to version 107.587 (IDEA 10.5.2)
    * [Fix] Handle Http redirection

Version 0.4.3:
    * [Fix] Jetbrains plateform version used in Phpstorm IDE makes the plugin crash
    * [Fix] Rss toolbar Panel Layout should be fixed (again)

Version 0.4.2:
    * [Upd] Support other JetBrains product
    * [Fix] Unsupported build parameters should not raise an error
    * [Fix] Regression in refreshing job
    * [fix] Rss toolbar Panel Layout should be fixed
    * [Fix] After clearing all rss entries, when clicking on update button, rss entries do not appear on the panel

Version 0.4.1:
    * [Add] Configuration Panel: Crumb Data can be read from a local file (see explaination on the wiki)