@@ -20,6 +20,7 @@
     <li>[Upd] Job are loaded in background (with a waiting UI decorator)</li>
     <li>[Upd] Improvement in handling Connection Exception</li>
     <li>[Fix] Widget should not be duplicated when opening new Project Window</li>
+    <li>[Fix] Build Parameter dialog does not work</li>
 </ul>
 <ul>Version 0.5.1
     <li>[Fix] Regression : When the server url is not set (or set to a dummy url), the plugin should not try to connect</li>
